<resources>
    <string name="app_name">SMD_20L-1114_A1</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="exit">EXIT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="retype_password">Retype Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="chatify_home">Chatify Home</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_lcase">username</string>
    <string name="post_count">1243</string>
    <string name="posts">posts</string>
    <string name="follower_count">5678</string>
    <string name="followers">followers</string>
    <string name="following_count">9000</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Hello this is my bio!\nI like cats!\nThis is my bio!</string>
    <string name="full_name">Full Name</string>
</resources>