<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coral"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_margin="30dp"
        app:cardCornerRadius="35dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/chatify"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:hintTextColor="@color/coral"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/coral"
                android:layout_marginTop="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/etName"
                    android:background="@null"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:hintTextColor="@color/coral"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/coral"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/etUsername"
                    android:background="@null"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/coral"
                android:hint="@string/email"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/coral"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:id="@+id/etEmail"
                    android:background="@null"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:hintTextColor="@color/coral"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/coral"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:id="@+id/etPassword"
                    android:background="@null"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/coral"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/retype_password"
                app:boxStrokeColor="@color/coral"
                android:layout_marginTop="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:id="@+id/etConfirmPassword"
                    android:background="@null"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/male"
                    app:buttonTint="@color/black"/>

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="18sp"
                    android:text="@string/female"
                    app:buttonTint="@color/black"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/exit"
                    android:backgroundTint="@color/gray"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:id="@+id/btnExit" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="2"
                    android:text="@string/sign_up"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/coral"
                    android:textSize="20sp"
                    android:id="@+id/btnSignup" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
