<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_coral"
        >
        <View
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            >

        </View>

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/username_lcase"
            android:layout_marginTop="@dimen/tiny_margin"
            android:textStyle="bold"
            android:id="@+id/tvUsername"
            ></TextView>

        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/settings_icon"
            >

        </ImageView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_height"
        android:background="@color/border_coral"
        >

    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/profile_pic_size"
            android:layout_height="@dimen/profile_pic_size"
            app:cardCornerRadius="@dimen/round_border_radius"
            android:layout_margin="@dimen/medium_margin"
            android:id="@+id/cvProfilePic"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/kitty"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cvProfilePic"
            android:orientation="vertical"
            android:layout_margin="@dimen/medium_margin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/post_count"
                        android:textStyle="bold"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginLeft="@dimen/tiny_margin"
                        ></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"
                        android:layout_marginLeft="@dimen/small_margin"
                        ></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/medium_margin"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/follower_count"
                        android:textStyle="bold"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginLeft="@dimen/tiny_margin"
                        ></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        ></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/medium_margin"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/following_count"
                        android:textStyle="bold"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginLeft="@dimen/tiny_margin"
                        ></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        ></TextView>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_marginTop="@dimen/tiny_margin"
                android:textSize="@dimen/radiobtn_textsize"
                android:backgroundTint="@color/border_coral"
                ></Button>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_marginLeft="@dimen/medium_margin"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            android:id="@+id/tvName"
            ></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/medium_margin"
            android:textSize="@dimen/radiobtn_textsize"
            android:id="@+id/tvBio"
            ></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_height"
            android:background="@color/light_coral"
            android:layout_marginTop="@dimen/medium_margin"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            >

            <ImageView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/grid_icon"
                ></ImageView>

            <ImageView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/list_icon"
                ></ImageView>

            <ImageView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/location_icon"
                ></ImageView>

            <ImageView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/tagged_icon"
                ></ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:src="@drawable/kitty2"
                    android:layout_marginRight="@dimen/tiniest_margin"
                    android:scaleType="centerCrop"
                    ></ImageView>

                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:src="@drawable/butterfly"
                    android:layout_marginRight="@dimen/tiniest_margin"
                    android:scaleType="centerCrop"
                    ></ImageView>

                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:src="@drawable/flower"
                    android:scaleType="centerCrop"
                    ></ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:src="@drawable/sea"
                    android:layout_marginRight="@dimen/tiniest_margin"
                    android:scaleType="centerCrop"
                    ></ImageView>

                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:src="@drawable/moon"
                    android:layout_marginRight="@dimen/tiniest_margin"
                    android:scaleType="centerCrop"
                    ></ImageView>

                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:src="@drawable/kitty3"
                    android:scaleType="centerCrop"
                    ></ImageView>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_coral"
        >
        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:src="@drawable/home_icon"
            android:layout_weight="1"
            android:layout_margin="@dimen/small_margin"
            ></ImageView>
        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:src="@drawable/search_icon"
            android:layout_weight="1"
            android:layout_margin="@dimen/small_margin"
            ></ImageView>
        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:src="@drawable/camera_icon"
            android:layout_weight="1"
            android:layout_margin="@dimen/small_margin"
            ></ImageView>
        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:src="@drawable/heart_icon"
            android:layout_weight="1"
            android:layout_margin="@dimen/small_margin"
            ></ImageView>
        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_icon"
            android:layout_weight="1"
            android:layout_margin="@dimen/small_margin"
            ></ImageView>

    </LinearLayout></RelativeLayout>

</LinearLayout>